--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -1,9 +1,10 @@
 - if @rows && !@rows.empty?
   %h3 Data
-  %ul
-    %li= link_to "Download table (as CSV)", scraper_data_path(@scraper, :format => :csv)
-    %li= link_to "Download SQLite database", scraper_data_path(@scraper, :format => :sqlite)
-    %li= link_to "Use the API", api_path
+  %p
+    .btn-group
+      = link_to "Download table (as CSV)", scraper_data_path(@scraper, :format => :csv), class: "btn btn-default"
+      = link_to "Download SQLite database", scraper_data_path(@scraper, :format => :sqlite), class: "btn btn-default"
+      = link_to "Use the API", api_path, class: "btn btn-default"
   %p (First 10 rows)
   .table-responsive
     %table.table.table-striped.table-bordered.table-condensed.scraper-data
