Add a couple of icons in footer

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -63,5 +63,9 @@
           = link_to "OpenAustralia Foundation", "https://www.openaustraliafoundation.org.au"
           for you
         %ul
-          %li= link_to "Source code on GitHub", "https://github.com/mlandauer/scraper-platform"
-          %li= link_to "Report an issue or suggest a feature", "https://github.com/mlandauer/scraper-platform/issues?state=open", target: "_blank"
+          %li
+            %i.icon-github-sign
+            = link_to "Source code on GitHub", "https://github.com/mlandauer/scraper-platform"
+          %li
+            %i.icon-bug
+            = link_to "Report an issue or suggest a feature", "https://github.com/mlandauer/scraper-platform/issues?state=open", target: "_blank"
