--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -20,7 +20,7 @@
 - if @scraper.forking?
   %h2 Forking!
   .progress.progress-striped.active
-    .bar(style="width: 100%")
+    .progress-bar(style="width: 100%")
   %span.muted
     (Refresh page for the latest)
 
