Fix text alignment in footer

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -62,7 +62,7 @@
           Made by the
           = link_to "OpenAustralia Foundation", "https://www.openaustraliafoundation.org.au"
           for you
-        %ul
+        %ul.list-unstyled
           %li
             %i.icon-github-sign
             = link_to "Source code on GitHub", "https://github.com/mlandauer/scraper-platform"
