Update links to github repo

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -65,7 +65,7 @@
         %ul.list-unstyled
           %li
             %i.icon-github-sign
-            = link_to "Source code on GitHub", "https://github.com/mlandauer/scraper-platform"
+            = link_to "Source code on GitHub", "https://github.com/openaustralia/morph"
           %li
             %i.icon-bug
-            = link_to "Report an issue or suggest a feature", "https://github.com/mlandauer/scraper-platform/issues?state=open", target: "_blank"
+            = link_to "Report an issue or suggest a feature", "https://github.com/openaustralia/morph/issues?state=open", target: "_blank"
