--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -12,10 +12,10 @@
 
 - if @scraper.github_url
   %p
+    %i.icon-github-sign.icon-large
     = link_to @scraper.github_url do
-      %i.icon-github-sign.icon-large
       = @scraper.name
-      on GitHub
+    (#{link_to @scraper.main_scraper_filename, @scraper.github_url_main_scraper_file}) on GitHub
 
 - if @scraper.forking?
   %h2 Forking!
