--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -18,7 +18,7 @@
     (#{link_to @scraper.main_scraper_filename, @scraper.github_url_main_scraper_file}) on GitHub
 
 - if @scraper.forking?
-  %h2 Forking!
+  %h2 Hardcore forking action
   .progress.progress-striped.active
     .progress-bar(style="width: 100%")
   %span.muted
