Add Google Analytics. Fix #114

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,6 +19,7 @@
 
 
   %body
+    = render "google_analytics"
     %nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
       .container
         .navbar-header
