Add another quote

--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -36,6 +36,12 @@
       %small
         = image_tag "http://www.gravatar.com/avatar/30e5eec125c81e549294137a3ddd6c74?s=30"
         = link_to "Matthew Landauer", "https://twitter.com/matthewlandauer"
+  %li
+    %blockquote
+      %p Does it come with plasticine?
+      %small
+        = image_tag "http://www.gravatar.com/avatar/87bb46366f13106c2deebf655af73b38?s=30"
+        = link_to "Kat Szuminska", "https://twitter.com/katska"
 
 .row
   .col-md-6
