Make the user avatar a little prettier

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,6 @@
 .row
   .col-md-3
-    = image_tag @user.gravatar_url, class: "img-responsive"
+    = image_tag @user.gravatar_url, class: "img-responsive img-thumbnail"
     %h1= @user.name
     %h2= @user.nickname
     %ul
