--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -8,14 +8,14 @@
 - if @scraper.scraperwiki_url
   %p
     Forked from
-    = link_to "ScraperWiki", @scraper.scraperwiki_url
+    = link_to "ScraperWiki", @scraper.scraperwiki_url, target: "_blank"
 
 - if @scraper.github_url
   %p
     %i.icon-github-sign.icon-large
-    = link_to @scraper.github_url do
+    = link_to @scraper.github_url, target: "_blank" do
       = @scraper.name
-    (#{link_to @scraper.main_scraper_filename, @scraper.github_url_main_scraper_file}) on GitHub
+    (#{link_to @scraper.main_scraper_filename, @scraper.github_url_main_scraper_file, target: "_blank"}) on GitHub
 
 - if @scraper.forking?
   %h2 Hardcore forking action
