--- a/app/views/scraperwiki_forks/new.html.haml
+++ b/app/views/scraperwiki_forks/new.html.haml
@@ -6,7 +6,7 @@
   Note that things are currently restricted to Ruby scrapers
 
 %p
-  = link_to "Browse and Search", "https://classic.scraperwiki.com/browse/"
+  = link_to "Browse and Search", "https://classic.scraperwiki.com/browse/", target: "_blank"
   for a scraper on ScraperWiki Classic that you want to fork. Then paste the url of the scraper below.
 
 = semantic_form_for @scraper, url: scraperwiki_forks_path do |f|
