--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -30,7 +30,7 @@
     .col-md-9
 
       - if @scraper.owned_by?(current_user)
-        %p= button_to "Run it now!", run_scraper_path(@scraper), class: ((@scraper.queued? || @scraper.running?) ? "btn btn-primary btn-lg disabled" : "btn btn-primary btn-lg"), disabled: (@scraper.queued? || @scraper.running?)
+        %p= button_to "Run it now!", run_scraper_path(@scraper), class: (!@scraper.runnable? ? "btn btn-primary btn-lg disabled" : "btn btn-primary btn-lg"), disabled: !@scraper.runnable?
     .col-md-3
       = render "settings"
 
