--- a/app/views/scrapers/_console.html.haml
+++ b/app/views/scrapers/_console.html.haml
@@ -1,7 +1,2 @@
-- if @scraper.last_run && !@scraper.last_run.log_lines.empty?
-  %h3 Console output
-  %p Hint: Keep this to a minimum during normal use (so that things remain readable)
-  %pre
-    - @scraper.last_run.log_lines.order(:number).each do |line|
-      -# TODO Highlight stderr differently
-      %span{:class => line.stream}= line.text
+- if @scraper.last_run 
+  = render partial: "runs/console", locals: {run: @scraper.last_run}
