--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -33,6 +33,12 @@
 
       - if @scraper.owned_by?(current_user)
         %p= button_to "Run it now!", run_scraper_path(@scraper), class: (!@scraper.runnable? ? "btn btn-primary btn-lg disabled" : "btn btn-primary btn-lg"), disabled: !@scraper.runnable?
+      %p
+        CPU time used:
+        = "%.1f s" % @scraper.cpu_time
+      %p
+        Disk space used:
+        = number_to_human_size @scraper.total_disk_usage
     .col-md-3
       = render "settings"
 
