Revert "Change wording. Fixes #106"
This reverts commit efc22433d090f31ebd593862344014fca9aaf567.

--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -20,7 +20,7 @@
     (#{link_to @scraper.main_scraper_filename, @scraper.github_url_main_scraper_file, target: "_blank"}) on GitHub
 
 - if @scraper.forking?
-  %h2 Hardcore forking action
+  %h2 Forking!
   .progress.progress-striped.active
     .progress-bar(style="width: 100%")
   %span.muted
