--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -17,7 +17,8 @@
     %i.icon-github-sign.icon-large
     = link_to @scraper.github_url, target: "_blank" do
       = @scraper.name
-    (#{link_to @scraper.main_scraper_filename, @scraper.github_url_main_scraper_file, target: "_blank"}) on GitHub
+    - if @scraper.main_scraper_filename
+      (#{link_to @scraper.main_scraper_filename, @scraper.github_url_main_scraper_file, target: "_blank"}) on GitHub
 
 - if @scraper.forking?
   %h2 Forking!
