Update text to say we support php too

--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -1,8 +1,8 @@
 %h1 Add scraper from your Github repository
 
 %p
-  For the time being scrapers are restricted to using Ruby. They need to have a file in the root
-  directory called "scraper.rb" and they should create an sqlite database in the current working
+  Scrapers can be written in Ruby or PHP. For Ruby They need to have a file in the root
+  directory called "scraper.rb" and for PHP "scraper.php". They should create an sqlite database in the current working
   directory called "#{Scraper.sqlite_db_filename}". The main data should be written into a table called "#{Scraper.sqlite_table_name}".
   The code needs to live in the master branch of the repository.
 
