--- a/app/views/scraperwiki_forks/new.html.haml
+++ b/app/views/scraperwiki_forks/new.html.haml
@@ -3,7 +3,7 @@
 %p This is where you can pick a Scraperwiki scraper, optionally choose a name for it on GitHub and fork away!
 
 .alert.alert-warning
-  Note that things are currently restricted to Ruby scrapers
+  Note that things are currently restricted to Ruby and PHP scrapers
 
 %p
   = link_to "Browse and Search", "https://classic.scraperwiki.com/browse/", target: "_blank"
