--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= content_for?(:title) ? yield(:title) : "Morph"
+    %title= content_for?(:title) ? "Morph: #{yield(:title)}" : "Morph"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -41,6 +41,7 @@
                 %li(class="divider")
                 %li= link_to "Fork scraper from Scraperwiki", new_scraperwiki_fork_path
             %li= link_to "API", api_path
+            %li= link_to "Documentation", documentation_path
           %ul.nav.navbar-nav.navbar-right
             %li
               - if user_signed_in?
