--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -32,19 +32,19 @@
     %blockquote
       %p Allow me to be the first to say amazeballs!
       %small
-        = image_tag "http://www.gravatar.com/avatar/1d9536edb482e9e1f56b86459abb06c4?s=30", size: "30x30"
+        = image_tag "https://www.gravatar.com/avatar/1d9536edb482e9e1f56b86459abb06c4?s=30", size: "30x30"
         = link_to "Henare Degan", "https://twitter.com/henaredegan"
   %li
     %blockquote
       %p I like it but then I would say that
       %small
-        = image_tag "http://www.gravatar.com/avatar/30e5eec125c81e549294137a3ddd6c74?s=30", size: "30x30"
+        = image_tag "https://www.gravatar.com/avatar/30e5eec125c81e549294137a3ddd6c74?s=30", size: "30x30"
         = link_to "Matthew Landauer", "https://twitter.com/matthewlandauer"
   %li
     %blockquote
       %p Does it come with plasticine?
       %small
-        = image_tag "http://www.gravatar.com/avatar/87bb46366f13106c2deebf655af73b38?s=30", size: "30x30"
+        = image_tag "https://www.gravatar.com/avatar/87bb46366f13106c2deebf655af73b38?s=30", size: "30x30"
         = link_to "Kat Szuminska", "https://twitter.com/katska"
 
 .row
