--- a/app/views/scraperwiki_forks/new.html.haml
+++ b/app/views/scraperwiki_forks/new.html.haml
@@ -12,6 +12,7 @@
 = semantic_form_for @scraper, url: scraperwiki_forks_path do |f|
   = f.inputs do
     = f.input :scraperwiki_url, hint: "The full URL for the ScraperWiki Classic scraper that you want to fork to here", input_html: {placeholder: "https://classic.scraperwiki.com/scrapers/city_of_sydney_development_applications/"}
+    = f.input :owner, collection: ([current_user] + current_user.organizations).map{|o| [o.nickname, o.id]}, include_blank: false
     = f.input :name, hint: "Name to give the scraper here and on GitHub", input_html: {placeholder: "city_of_sydney_development_applications"}
   = f.actions do
     = f.action :submit, label: "Fork Scraperwiki scraper"
