--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -32,7 +32,7 @@
   .row
     .col-md-9
 
-      - if @scraper.owned_by?(current_user)
+      - if @scraper.can_write?(current_user)
         %p= button_to "Run it now!", run_scraper_path(@scraper), class: (!@scraper.runnable? ? "btn btn-primary btn-lg disabled" : "btn btn-primary btn-lg"), disabled: !@scraper.runnable?
       %p
         CPU time used:
