Make a table with a large number of fields scrollable

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -2,11 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-table.scraper-data {
-  table-layout: fixed;
-  td, th {
-    word-wrap: break-word;
-  }
+.table-responsive.scraper-data {
+  overflow-x: scroll;
 }
 
 span.stderr {
