--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -6,8 +6,8 @@
       = link_to "Download SQLite database", scraper_data_path(@scraper, :format => :sqlite), class: "btn btn-default"
       = link_to "Use the API", api_path, class: "btn btn-default"
   %p rows 10 / #{@scraper.database.no_rows} (#{number_to_human_size @scraper.database.sqlite_db_size})
-  .table-responsive
-    %table.table.table-striped.table-bordered.table-condensed.scraper-data
+  .table-responsive.scraper-data
+    %table.table.table-striped.table-bordered.table-condensed
       %tr
         - @rows.first.each_key do |field|
           %th= field
