Add a soft edge to the rhs of the table to indicate that there might be more

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -4,6 +4,11 @@
 
 .table-responsive.scraper-data {
   overflow-x: scroll;
+  -webkit-mask: -webkit-linear-gradient(
+      left,
+      rgba(255,255,255,1) 95%,
+      rgba(255,255,255,0)
+    );
 }
 
 span.stderr {
