--- a/app/views/runs/_status.html.haml
+++ b/app/views/runs/_status.html.haml
@@ -1,23 +1,23 @@
-- if run.queued_at && run.started_at.nil?
+- if run.queued?
   .alert.alert-info
     The scraper is <strong>queued to run</strong>. It was queued
     = time_ago_in_words(run.queued_at)
     ago.
     %span.muted
       (Refresh page for the latest)
-- elsif run.started_at && run.finished_at.nil?
+- elsif run.running?
   .alert.alert-info
     The scraper is <strong>running</strong>. It was started
     = time_ago_in_words(run.started_at)
     ago.
     %span.muted
       (Refresh page for the latest)
-- elsif run.finished_at && run.status_code == 0
+- elsif run.finished_successfully?
   .alert.alert-success
     Last run completed successfully
     = time_ago_in_words(run.finished_at)
     ago
-- elsif run.finished_at && run.status_code != 0
+- elsif run.finished_with_errors?
   .alert.alert-danger
     Last run failed
     = time_ago_in_words(run.finished_at)
