--- a/app/views/scrapers/_scraper.html.haml
+++ b/app/views/scrapers/_scraper.html.haml
@@ -7,4 +7,4 @@
   - if scraper.auto_run
     %i.icon-time
   - if scraper.last_run && (scraper.last_run.queued? || scraper.last_run.running?)
-    %i.icon-refresh.icon-spin
+    .pulse
