--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -3,7 +3,12 @@
   \/
   = link_to @scraper.name, @scraper
 
-%h4= @scraper.description
+%h4
+  = @scraper.description
+  - if @scraper.auto_run
+    %i.icon-time
+  - if @scraper.last_run && (@scraper.last_run.queued? || @scraper.last_run.running?)
+    .pulse
 
 %p= @scraper.readme
 
