--- a/app/views/scrapers/_scraper.html.haml
+++ b/app/views/scrapers/_scraper.html.haml
@@ -1,6 +1,5 @@
 %li{class: ("alert-danger" if scraper.last_run && scraper.last_run.finished_with_errors?)}
-  %strong
-    = link_to scraper.full_name, scraper
+  %strong= link_to scraper.full_name, scraper, class: "alert-link"
   - unless scraper.description.blank?
     &mdash;
     = scraper.description
