--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -50,13 +50,13 @@
 .row
   .col-md-6
     %h2 All Users
-    %ul
+    %ul.list-unstyled
       - User.all.each do |user|
         %li= link_to user.nickname, user
     %h2 All Organizations
-    %ul
+    %ul.list-unstyled
       - Organization.all.each do |org|
         %li= link_to org.nickname, org
   .col-md-6
     %h2 All Scrapers
-    %ul= render Scraper.all
+    %ul.list-unstyled= render Scraper.all
