--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -67,4 +67,4 @@
             = org.name
   .col-md-6
     %h2 All Scrapers
-    %ul.list-unstyled= render Scraper.all
+    .list-group= render Scraper.all
