--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -33,8 +33,8 @@
     - else
       %h3 Scrapers
       - if @owner.scrapers.any?{|s| s.requires_attention?}
-        %ul.list-group= render @owner.scrapers.select{|s| s.requires_attention?}
-      %ul.list-group= render @owner.scrapers.select{|s| !s.requires_attention?}
+        .list-group= render @owner.scrapers.select{|s| s.requires_attention?}
+      .list-group= render @owner.scrapers.select{|s| !s.requires_attention?}
 
     - if @owner == current_user
       %p= link_to "Add scraper", new_scraper_path, class: "btn btn-default"
