Line up the icons

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -26,6 +26,11 @@ span.stderr {
   color: red;
 }
 
+.icon-box {
+  width: 15px;
+  height: 15px;
+}
+
 .pulse {
   vertical-align: middle;
   width: 1em;
