--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -43,8 +43,7 @@
       %h3 Statistics
       %p
         Total run time:
-        -# TODO refactor this by using (and creating) @owner.runs
-        = "%.1f s" % @owner.scrapers.sum(&:total_wall_time)  
+        = "%.1f s" % @owner.runs.sum(&:wall_time)  
       %p
         Total cpu time used:
         = "%.1f s" % @owner.scrapers.sum(&:cpu_time)
