--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -7,7 +7,7 @@
   = @scraper.description
   - if @scraper.auto_run
     %i.icon-time
-  - if @scraper.last_run && (@scraper.last_run.queued? || @scraper.last_run.running?)
+  - if @scraper.queued? || @scraper.running?
     .pulse
 
 %p= @scraper.readme
