Add button to show your key

--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -15,15 +15,19 @@
         on GitHub
     - unless @owner.organizations.empty?
       %h4 Organizations
-      - @owner.organizations.each do |org|
-        = link_to org do
-          = image_tag org.gravatar_url(30), size: "30x30"
+      %p
+        - @owner.organizations.each do |org|
+          = link_to org do
+            = image_tag org.gravatar_url(30), size: "30x30"
     - unless @owner.users.empty?
       %h4 Members
-      - @owner.users.each do |user|
-        = link_to user do
-          = image_tag user.gravatar_url(30), size: "30x30"
-
+      %p
+        - @owner.users.each do |user|
+          = link_to user do
+            = image_tag user.gravatar_url(30), size: "30x30"
+    - if @owner == current_user
+      %div
+        = link_to "Show your key", user_settings_path, class: "btn btn-default"
 
   .col-md-9
 
