--- a/app/views/users/settings.html.haml
+++ b/app/views/users/settings.html.haml
@@ -3,3 +3,5 @@
 %p You will need this if you use the Morph command line client
 
 %p This key is just for you. Don't give it to anyone else.
+
+= button_to "Reset key", user_reset_key_path, class: "btn btn-danger"
