Add section on usage limits and a super bare-bones T&C which says it's your responsibility

--- a/app/views/static/documentation.html.haml
+++ b/app/views/static/documentation.html.haml
@@ -52,3 +52,14 @@
   It will run your local scraper on the Morph server and stream the console output back to you. You can use this with any support scraper
   language without the hassle of having to install lots of things.
 
+  ### What limits are there on numbers of scrapers, usage, etc.?
+  Right now there are none. We are trusting you that you won't abuse this. Note that we are keeping track of the amount of cpu time (and a whole
+  bunch of other metrics) that you and your scrapers are using. So, if we do find that you are using too much (and no we don't know what that
+  is right now) we reserve the right to kick you out. In reality first we'll ask you nicely to stop.
+
+  We're thinking about putting limits in place on free accounts as this service grows. Also, potentially adding support for private scrapers
+  under a paid plan as well. Let us know [what you think and want](mailto:contact@oaf.org.au).
+
+  ### Your responsibility
+  Please keep things legal. Don't scrape anything you're not allowed to. If you do end up doing anything you're not allowed to, it's your
+  responsibility not ours.
