When you need to login redirect to a login page with a big button. Fix #81

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -14,3 +14,9 @@
     margin-top: 70px;
     padding: 30px 0;
   }
+
+  .sign_in {
+    max-width: 500px;
+    margin: 50px auto;
+    text-align: center;
+  }
